--- a/class_proj/class_proj/templates/base.html
+++ b/class_proj/class_proj/templates/base.html
@@ -18,7 +18,13 @@
   </header>
   <aside id="leftsidebar">
     <nav id="nav">
-    <ul><li>Menu 1</li><li>Menu 2</li><li>Menu 3</li></ul>
+      <ul>
+        {% block sidenav %}
+        <li>Menu 1</li><li>Menu 2</li><li>Menu 3</li>
+        {% endblock sidenav %}
+        <li><a href="/contact">Contact Us</a></li>
+        <li><a href="/quote">Get a Quote</a></li>
+        </ul>
     </nav>
   </aside>
   <section id="main">
